--- a/QuickBucks/QuickBucks/Views/MainPage.xaml
+++ b/QuickBucks/QuickBucks/Views/MainPage.xaml
@@ -1,22 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:views="clr-namespace:QuickBucks.Views"
-            x:Class="QuickBucks.Views.MainPage">
-
+<?xml version="1.0" encoding="utf-8"?>
+<MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:views="clr-namespace:QuickBucks.Views" xmlns:dashb="clr-namespace:QuickBucks.Views.Dashboard" x:Class="QuickBucks.Views.MainPage">
     <MasterDetailPage.Master>
-        <views:MenuPage />
+        <NavigationPage Title="Menuz">
+            <NavigationPage.Icon>
+                <OnPlatform x:TypeArguments="FileImageSource">
+                    <On Platform="iOS" Value="tab_feed.png" />
+                    <On Platform="Android" Value="tab_feed.png" />
+                </OnPlatform>
+            </NavigationPage.Icon>
+            <x:Arguments>
+                <views:MenuPage>
+                </views:MenuPage>
+            </x:Arguments>
+        </NavigationPage>
     </MasterDetailPage.Master>
-
     <MasterDetailPage.Detail>
         <NavigationPage>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
+                    <On Platform="iOS" Value="tab_feed.png" />
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:ItemsPage />
+                <dashb:Landing/>
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
