added log on page and modified master/detail

--- a/QuickBucks/QuickBucks/Views/Dashboard/LandingHome.xaml
+++ b/QuickBucks/QuickBucks/Views/Dashboard/LandingHome.xaml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" ios:Page.UseSafeArea="true" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QuickBucks.Views.Dashboard.LandingHome" xmlns:c="clr-namespace:QuickBucks.Controls" BackgroundColor="Gray">
+<ContentPage xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
+             ios:Page.UseSafeArea="true" 
+             Title="Quick Bucks"
+             xmlns="http://xamarin.com/schemas/2014/forms" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             x:Class="QuickBucks.Views.Dashboard.LandingHome" 
+             xmlns:c="clr-namespace:QuickBucks.Controls" 
+             BackgroundColor="{StaticResource PrimaryColor}">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.4*" />
+            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
@@ -11,12 +18,13 @@
         <Grid Grid.Row="0" RowSpacing="0" ColumnSpacing="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*" />
+                <RowDefinition Height="0.4*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Frame Margin="5,5,5,0" x:Name="nameBanner" HasShadow="false" CornerRadius="0" BackgroundColor="#35394a" Grid.Row="0" Grid.ColumnSpan="2">
+            <Frame Margin="5,5,5,0" x:Name="nameBanner" HasShadow="false" CornerRadius="0" BackgroundColor="{StaticResource PrimaryColor}" Grid.Row="0" Grid.ColumnSpan="2">
               <!--  <Label LineBreakMode="WordWrap">
                     <Label.FormattedText>
                         <FormattedString>
@@ -29,24 +37,24 @@
                 <Label Text="Welcome, &#10; OLOLADE OYEBANJI" TextColor="White" />
               
             </Frame>
-            <Button BorderRadius="0" HeightRequest="10" Margin="5,0,0,0" Text="Outstanding Loans" Grid.Row="1" Grid.Column="0" BackgroundColor="orange" />
-            <Button BorderRadius="0" HeightRequest="10" Margin="0,0,5,0" Text="Main Loan" Grid.Row="1" Grid.Column="1" BackgroundColor="Silver" />
+            <Button x:Name="LoanOffers" TextColor="White" BorderRadius="0" HeightRequest="10" Margin="5,0,0,0" Text="Your Loans offers" Grid.Row="1" Grid.Column="0" BackgroundColor="orange" />
+            <Button x:Name="BankOffers" TextColor="orange" BorderRadius="0" HeightRequest="10" Margin="0,0,5,0" Text="Your Bank Account" Grid.Row="1" Grid.Column="1" BackgroundColor="White" />
         </Grid>
         <StackLayout Margin="5,0,0,0" Grid.Row="1">
             <Label Text="INSTANT LOAN PRODUCTS" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" TextColor="White" />
         </StackLayout>
         <Grid Grid.Row="2" ColumnSpacing="0">
-            <c:RelativeFrames Grid.Column="0" HeightRequest="350" WidthRequest="150" />
-            <c:RelativeFrames Grid.Column="1" HeightRequest="350" WidthRequest="150" />
-            <c:RelativeFrames Grid.Column="2" HeightRequest="350" WidthRequest="150" />
+            <c:RelativeFrames Grid.Column="0" HeightRequest="350" WidthRequest="280" />
+            <c:RelativeFrames Grid.Column="1" HeightRequest="350" WidthRequest="180" />
+            <c:RelativeFrames Grid.Column="2" HeightRequest="350" WidthRequest="180" />
         </Grid>
         <StackLayout Margin="5,0,5,0" Grid.Row="3">
             <Label Text="OTHER LOAN PRODUCTS" TextColor="White" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand"  />
         </StackLayout>
         <Grid Grid.Row="4" ColumnSpacing="0">
-            <c:RelativeFrames Grid.Column="0" HeightRequest="350" WidthRequest="150" />
-            <c:RelativeFrames Grid.Column="1" HeightRequest="350" WidthRequest="150" />
-            <c:RelativeFrames Grid.Column="2" HeightRequest="350" WidthRequest="150" />
+            <c:RelativeFrames Grid.Column="0" HeightRequest="350" WidthRequest="180" />
+            <c:RelativeFrames Grid.Column="1" HeightRequest="350" WidthRequest="180" />
+            <c:RelativeFrames Grid.Column="2" HeightRequest="350" WidthRequest="180" />
         </Grid>
     </Grid>
 </ContentPage>
