--- a/QuickBucks/QuickBucks/Views/MenuPage.xaml
+++ b/QuickBucks/QuickBucks/Views/MenuPage.xaml
@@ -2,13 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuickBucks.Views.MenuPage"
+            
              >
     <StackLayout VerticalOptions="FillAndExpand">
-        <BoxView Color="#0B777A" HeightRequest="100" >
+        <BoxView Color="Gray" HeightRequest="150" >
             
         </BoxView>
         <ListView x:Name="ListViewMenu"
-                    HasUnevenRows="True">
+                    HasUnevenRows="True"
+                  Footer=""
+                  >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
