--- a/QuickBucks/QuickBucks/Controls/RelativeFrames.xaml
+++ b/QuickBucks/QuickBucks/Controls/RelativeFrames.xaml
@@ -1,33 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentView Padding="10" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QuickBucks.Controls.RelativeFrames">
+<ContentView Padding="5" xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="QuickBucks.Controls.RelativeFrames">
     <ContentView.Content>
         <RelativeLayout>
-            <Frame CornerRadius="10" HasShadow="false" x:Name="ProductSection" Margin="10,0,10,0" BackgroundColor="orange" RelativeLayout.WidthConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Width,&#xA;            Factor=1}" RelativeLayout.HeightConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Height,&#xA;            Factor=0.98}">
-              <AbsoluteLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
-            <Button Text="2 Months" FontSize="15" TextColor="White" AbsoluteLayout.LayoutBounds="0, 1.03, 1, 50" 
-                AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional" />
-                </AbsoluteLayout>
-            </Frame>
-            <!--     <AbsoluteLayout VerticalOptions="FillAndExpand" 
-                            HorizontalOptions="FillAndExpand">
-                <StackLayout AbsoluteLayout.LayoutBounds="0,1,1,50" 
-                             AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional">
-                    <Label Text="1 Month" 
+            <Frame CornerRadius="10" 
+                   HasShadow="false" 
+                   x:Name="ProductSection" 
+                   Margin="5,0,5,0" 
+                   BackgroundColor="orange" 
+                   RelativeLayout.WidthConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Width,&#xA;            Factor=1}" RelativeLayout.HeightConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Height,&#xA;            Factor=0.98}">
+           <!--   <AbsoluteLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" >
+            <Label Text="2 Months" 
+                   FontSize="12" 
+                   TextColor="White" 
+                   AbsoluteLayout.LayoutBounds="1, 1.05, 1, 50" 
+                   AbsoluteLayout.LayoutFlags="PositionProportional, WidthProportional" />
+                </AbsoluteLayout>-->
+                <Grid>
+                  
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.92*" />
+                        <RowDefinition Height="0.08*" />
+                    </Grid.RowDefinitions>
+                    <Label Text="12 Months"
+                           TextColor="White"
+                           FontSize="13"
+                           LineBreakMode="TailTruncation"
+                           Grid.Row="1" 
                            HorizontalOptions="CenterAndExpand" 
-                           HorizontalTextAlignment="Center" 
-                           FontSize="10" 
-                           x:Name="hgh" 
-                           TextColor="White" />
-                </StackLayout>
-            </AbsoluteLayout>-->
-            <Frame CornerRadius="0" HasShadow="true" BackgroundColor="Gray" RelativeLayout.WidthConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Width,&#xA;            Factor=1}" RelativeLayout.HeightConstraint="{ConstraintExpression &#xA;            Type=RelativeToView,&#xA;            ElementName=ProductSection,&#xA;            Property=Height,&#xA;            Factor=0.85}">
+                           VerticalOptions="EndAndExpand" />
+                </Grid>
+            </Frame>
+         <!--   <Label Text="32 Months" 
+                   TextColor="Blue" 
+                   FontSize="12"
+            
+                  
+                   RelativeLayout.YConstraint="{ConstraintExpression 
+            Type=RelativeToView,
+            ElementName=ProductDisplay,
+            Property=Height,
+            Factor=1,
+            Constant=10}"
+                   RelativeLayout.XConstraint="{ConstraintExpression 
+                Type=RelativeToView,
+               
+                ElementName=ProductDisplay,
+                Factor=1,
+                Property=Width,
+            Constant=-200
+                
+                }"
+                   />-->
+            <Frame x:Name="ProductDisplay" 
+                   CornerRadius="0" 
+                   HasShadow="true" 
+                   BackgroundColor="{StaticResource PrimaryColor}" 
+                   RelativeLayout.WidthConstraint="{ConstraintExpression &#xA;            Type=RelativeToParent,&#xA;            Property=Width,&#xA;            Factor=1}" RelativeLayout.HeightConstraint="{ConstraintExpression &#xA;            Type=RelativeToView,&#xA;            ElementName=ProductSection,&#xA;            Property=Height,&#xA;            Factor=0.85}">
                 <Grid HorizontalOptions="CenterAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <Label Text="$500,003" FontSize="10" TextColor="White" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Start" LineBreakMode="NoWrap" Grid.Row="0" />
+                    <Label Text="$50,000,000" FontSize="10" TextColor="White" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Start" LineBreakMode="NoWrap" Grid.Row="0" />
                     <Image Source="tab_feed.png" Grid.Row="1" />
                     <Label Text="PAY DAY LOAN" FontSize="13" TextColor="White" HorizontalTextAlignment="Center" LineBreakMode="WordWrap" MaxLines="2" Grid.Row="2" />
                 </Grid>
