--- a/QuickBucks/QuickBucks/Views/Dashboard/LandingHome.xaml
+++ b/QuickBucks/QuickBucks/Views/Dashboard/LandingHome.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true" 
+               NavigationPage.HasNavigationBar="False"
              Title="Quick Bucks"
              xmlns="http://xamarin.com/schemas/2014/forms" 
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
