--- a/QuickBucks/QuickBucks/Views/MainPage.xaml
+++ b/QuickBucks/QuickBucks/Views/MainPage.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <MasterDetailPage 
-     NavigationPage.HasNavigationBar="False"
+    
     xmlns="http://xamarin.com/schemas/2014/forms" 
                   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
                   xmlns:views="clr-namespace:QuickBucks.Views" 
                   xmlns:dashb="clr-namespace:QuickBucks.Views.Dashboard" 
                   x:Class="QuickBucks.Views.MainPage">
-    <MasterDetailPage.Master>
+ <MasterDetailPage.Master>
         <NavigationPage Title="Menuz">
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
@@ -20,6 +20,12 @@
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Master>
+  <!--  <MasterDetailPage.Master>
+        
+                <views:MenuPage>
+                </views:MenuPage>
+         
+    </MasterDetailPage.Master>-->
     <MasterDetailPage.Detail>
         <NavigationPage>
             <NavigationPage.Icon>
