--- a/QuickBucks/QuickBucks/Views/MenuPage.xaml
+++ b/QuickBucks/QuickBucks/Views/MenuPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QuickBucks.Views.MenuPage"
-            
+            Title="My Menu"
              >
     <StackLayout VerticalOptions="FillAndExpand">
         <BoxView Color="Gray" HeightRequest="150" >
